<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginActivity"
    android:orientation="vertical">

    <!-- The ActionBar displayed at the top -->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/activity_general_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="@string/abc_font_family_caption_material"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:backgroundTint="@color/colorAccent"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_general_margin"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="@string/abc_font_family_caption_material"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:backgroundTint="@color/colorAccent"
            android:nextFocusUp="@+id/password"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_general_margin"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="@string/abc_font_family_caption_material"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:backgroundTint="@color/colorAccent"
            />

        <Button
            android:id="@+id/register_register"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:layout_gravity="center_horizontal"
            android:text="CADASTRAR"
            android:textSize="21dp"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="16dp"/>

    </LinearLayout>





</LinearLayout>

